# othello

./: .gitignore  AI.cc  AI.hh  BoardGraphics.cc  BoardGraphics.hh  CMakeLists.txt  Doxyfile  EndScreen.cc  EndScreen.hh  EndScreen.ui  GameBoard.cc  GameBoard.hh  GameLogic.cc  GameLogic.hh  GameLogicGomoku.cc  GraphicsScene.cc  GraphicsScene.hh  HistoryItem.cc  HistoryItem.hh  HistoryItem.ui  HistoryItemGui.cc  HistoryItemGui.hh  HistoryItemGui.ui  HistoryPanel.cc  HistoryPanel.hh  HistoryPanel.ui  InfoPanel.cc  InfoPanel.hh  InfoPanel.ui  MainGame.cc  MainGame.hh  MainWindow.cc  MainWindow.hh  MainWindow.ui  Makefile  OthelloGui.cc  OthelloGui.hh  OthelloGui.ui  OthelloGui.ui.autosave  Player.hh  (+15 more)
examples/: AlfaBeta_Ai_8  Human_Ai_12  Human_Human_8
img/: allInOne.psd
src/: Makefile  main-qt.cc  main.cc
src/gui/: BoardGraphics.cc  BoardGraphics.hh  EndScreen.cc  EndScreen.hh  HistoryItemGui.cc  HistoryItemGui.hh  HistoryPanel.cc  HistoryPanel.hh  HistoryPanel.ui  InfoPanel.cc  InfoPanel.hh  InfoPanel.ui  MainWindow.cc  MainWindow.hh  Makefile  OthelloGui.cc  OthelloGui.hh  OthelloGui.ui  PlayerSelection.cc  PlayerSelection.hh  PlayerSelection.ui  StartPanel.cc  StartPanel.hh
src/logic/: AI.cc  AI.hh  Command.cc  Command.hh  CommandManager.cc  CommandManager.hh  Field.cc  Field.hh  GameBoard.cc  GameBoard.hh  GameLogic.cc  GameLogic.hh  GameLogicGomoku.hh  HardAI.cc  HardAI.hh  MainGame.cc  MainGame.hh  Makefile  Player.cc  Player.hh  commandManager.cc  commandManager.hh
